# NMPDE_2022_CMS

./: .gitignore  CMakeLists.txt  README.md
common/: cmake-common.cmake
input/: input.json
mesh/: Ptero_full.msh  Ptero_full_slice_upper.msh  Ptero_reduced.msh  Ptero_reduced_x2.msh  Ptero_reduced_x2_new.msh  Ptero_small.msh  Ptero_small_2.msh  Ptero_test.msh  cylinder3d.msh  cylinder3d_small_fine.msh
scripts/: Ptero_full.geo  half_ptero_reducedx2.stp
scripts/Cluster/: build_stokes.sub  build_stokes_cuda.sub  ptero_run.sub
scripts/Mesh/: Ptero Slice.geo  Ptero_full.geo  Ptero_full.msh  Ptero_half_coarse_new.stp  Ptero_reduced_x2.msh  half_ptero_reducedx2.stp
scripts/Modules/: load_modules.sh  unload_modules.sh
src/: PreconditionBlockTriangular.hpp  PreconditionSIMPLE.hpp  Problem.cpp  Problem.hpp  SimulationSettings.cpp  SimulationSettings.hpp  Stokes.cpp  Stokes.hpp  lab-09.cpp  main.cpp
